# Simulateur-d-emergence-D-eterministe

./: .gitignore  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  INSTRUCTIONS_WINDOWS.md  Makefile  MondeSED.cpp  MondeSED.h  README.md  README_Lois_Mathematiques.md  SECURITY.md  agent_explorateur.py  build.bat  comparaison.md  compte_rendu_experimentation.md  conception_agent_explorateur_ia.md  conception_hashlife_sed.md  default_sim_cycle_10.csv  default_sim_cycle_20.csv  default_sim_cycle_30.csv  default_sim_cycle_40.csv  default_sim_cycle_50.csv  documentation.md  emergence_et_limites.md  exploration_intelligence_sed.md  export_cycle_10.json  export_cycle_20.json  export_cycle_30.json  export_cycle_40.json  export_cycle_50.json  flake.nix  imgui.ini  interface_scientifique.py  launcher_log.txt  lois_mathematiques.md  main.cpp  package-lock.json  sed_lab.py  sed_simulator  (+5 more)
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build.yml
app/: main.cpp
docs/: ajout.md  colone_vertebrale.md  documentation.md  lois_mathematiques.md  main.md  wikiafinir.md
imgui/: imconfig.h  rlImGui.cpp  rlImGui.h
include/: Chunk.h  InputSystem.h  MondeSED.h  SimulationData.h  WorldMap.h
include/laws/: ILaw.h  ILocalLaw.h  LoiMetabolisme.h
include/plugins/: PluginAPI.h  PluginManager.h
libs/imgui/: imgui-SFML.cpp  rlImGui.cpp
plugins/SamplePlugin/: HealingLaw.cpp
scenarios/: default.json
src/: Chunk.cpp  InputSystem.cpp  Interface.cpp  Interface.h  MondeSED.cpp  MondeSED_CopyState.cpp  Renderer.cpp  Renderer.h  Validator.cpp  Validator.h  WorldMap.cpp  main.cpp  main.rs
src/laws/: LoiMetabolisme.cpp
src/shaders/: sed_compute.glsl  sed_titanic.glsl  sed_vis.glsl
src/simulation/: cell.rs  chunk.rs  laws.rs  mod.rs  params.rs  world.rs
src/utils/: PluginManager.cpp
tests/: test_determinism.cpp  test_law_metabolism.cpp  test_plugin_system.cpp  test_simulation.rs
